--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,7 @@
 }
 .main{
     display: flex;
+    height: 535px;
     background-color: #0EB4C1;
 }
 .main-container{
@@ -143,4 +144,48 @@ align-items: center;
     margin-top: 60px;
     margin-bottom: 120px;
     
+}
+.admin{
+        display: flex;
+        justify-content: center;
+        height: 253px;
+        background: #0EB4C1;
+}
+.admin h1{
+    display: flex;
+    justify-content: center;
+    width: 365px;
+    font-family: 'Open Sans Condensed';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 120%;
+    color: #FFFFFF;
+    margin-top: 64px;
+    margin-bottom: 55px;
+}
+.admin-links{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Open Sans Condensed';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 10px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+
+}
+.admin-link{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 12px 24px;
+    width: 194px;
+    height: 42px;
+    border: 2px solid #FFFFFF;
+    border-radius: 8px;
+    margin-right: 40px;
+    color: #fff;
+    text-decoration: none;
 }
