--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@
 }
 .container{
     width: 100%;
-    max-width: 1120px;
     padding-left: 30px;
     padding-right: 30px;
     margin-left: auto;
@@ -187,5 +186,29 @@ align-items: center;
     border-radius: 8px;
     margin-right: 40px;
     color: #fff;
+    text-decoration: none;
+}
+.site-footer{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 24px;
+    background: #222222;
+    color: #fff;
+}
+.footer-logo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+.footer-nav-items{
+    display: flex;
+    justify-content: center;
+    list-style: none;
+}
+.footer-nav-itme{
+    color: #fff;
+    margin-right: 16px;
     text-decoration: none;
 }
